[package]
name = "advent_rust"
version = "0.1.0"
authors = ["Dan Seminara <semi225599@gmail.com>"]
edition = "2024"

[lib]
name = "advent"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.8.0"
derive_more = { version = "2.1.1", features = ["add", "add_assign", "constructor"] }
enum-map = "2.7.3"
genawaiter = "0.99.1"
good_lp = { version = "1.14.2", features = ["highs"], default-features = false }
hashbrown = { version = "0.16.1", features = ["rayon"] }
hex = "0.4.3"
hybrid-array = "0.4.5"
impl_ops = "0.1.1"
itertools = "0.14"
md-5 = "0.11.0-rc.3"
nalgebra = "0.34.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
num = "0.4.3"
num-complex = "0.4.6"
num-derive = "0.4.2"
num-rational = "0.4.2"
num-traits = "0.2.19"
phf = { version = "0.13.1", features = ["macros"] }
proc-macro2 = { version = "1.0.104", features = ["span-locations"] }
quote = "1.0.42"
rayon = "1.11.0"
reqwest = { version = "0.13.1", features = ["blocking", "form", "json"] }
select = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
smallvec = { version = "1.15.1", features = ["const_generics", "const_new"] }
streaming-iterator = "0.1.9"
syn = { version = "2.0.112", features = ["extra-traits"] }
toml = "0.9.10"
wide = "1.1.1"
winnow = "0.7.14"

[lints.rust]
dropping_copy_types = "allow"

[lints.clippy]
disallowed_types = "deny"
filter_map_bool_then = "allow"
many_single_char_names = "allow"
# https://github.com/rust-lang/rust-clippy/issues/15988
needless_range_loop = "allow"
